--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="UTF-8">
 <title>
-Celines Birthday Party
+Celine's Birthday Party
 </title>
 	<style>
 	@import url('https://fonts.googleapis.com/css?family=Baloo+Bhaijaan|Harmattan|Jomhuria|Katibeh|Lalezar|Mirza');
@@ -110,7 +110,7 @@ Celines Birthday Party
 ساعت 19:00<br>
 </p>
 
-<p id="address"> آدرس:اندیشه فاز 4 خیابان توحید شمالی پایین تر از چهارراه ارغوان خیابان الامه جعفری نبش خیابان خواجه نصیرالدین طوسی، <span id="blue">مکتب آبی</span></p>
+<p id="address"> آدرس:اندیشه فاز 4 خیابان توحید شمالی پایین تر از چهارراه ارغوان خیابان علامه جعفری نبش خیابان خواجه نصیرالدین طوسی، <span id="blue">مکتب آبی</span></p>
 </div>
 <!-- ............................................... -->
 
